--- a/estilos/style.css
+++ b/estilos/style.css
@@ -64,10 +64,7 @@ h6{
     padding-bottom: 5px;
     display: none;
 }
-.arreglosCarritos{
-    height: 40rem;
-    width: 63rem;
-}
+
 .planillaCarritos{
     height: 30rem;
     width: 76rem;
@@ -76,21 +73,11 @@ h6{
     overflow-y: scroll;
     border-radius: 5px;
 }
-.btn-carrito{
-        width: 33.33%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-}
 .badge{
     background-color: #4a6da7;
     color: white;
 }
-.btn-carrito:hover{
-    background-color: aliceblue;
-    color: green;
-    border-color: green;
-}
+
 #planillaLimpieza{
     width: 22.7rem;
     height: 23rem;
@@ -98,17 +85,16 @@ h6{
 }
 .img-carrito {
     display: block;
-    margin: 0 auto;
-    max-height: 24rem;
+    margin:auto;
+    max-height: 30rem;
     max-width: 100%;
     width: 100%;
-    
-  }
+    }
+.btn{
+    background-color: #4a6da7;
+}
 
 @media (max-width: 992px) {
-    .carousel{
-        display: none;
-    }
     .card-text{
         font-size: 0.9rem;
     }
