--- a/estilos/style.css
+++ b/estilos/style.css
@@ -86,12 +86,16 @@ h6{
 .img-carrito {
     display: block;
     margin:auto;
-    max-height: 30rem;
+    max-height: 27rem;
     max-width: 100%;
     width: 100%;
     }
 .btn{
     background-color: #4a6da7;
+}
+.plan-salidas{
+    width: 54.5rem;
+    height: 25rem;
 }
 
 @media (max-width: 992px) {
