--- a/estilos/style.css
+++ b/estilos/style.css
@@ -100,7 +100,104 @@ h6 {
 .ul-clima{
     margin-right: 2rem;
 }
+.container {
+  width: 100%;
+  max-width: 1000px;
+  margin: auto;
+}
 
+.table {
+  width: 100%;
+  border: 1px solid #ccc;
+  border-collapse: collapse;
+  margin: 0;
+  padding: 0;
+  table-layout: fixed;
+}
+
+.table caption {
+  font-size: 28px;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin: 8px 0px;
+}
+
+.table tr {
+  background-color: #f8f8f8;
+  border: 1px solid #ddd;
+}
+
+.table th, .table td {
+  font-size: 16px;
+  padding: 8px;
+  text-align: center;
+}
+
+.table thead th{ 
+  text-transform: uppercase;
+  background-color: #ddd;
+}
+
+.table tbody tr:hover {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.table tbody td:hover {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+@media screen and (max-width: 600px) {
+  .table {
+      border: 0px;
+  }
+  .table caption {
+      font-size: 22px;
+  }
+  .table thead {
+      display: none;
+  }
+  .table tr {
+      margin-bottom: 8px;
+      border-bottom: 4px solid #ddd;
+      display: block;
+  }
+  .table th, .table td {
+      font-size: 12px;
+  }
+  .table td {
+      display: block;
+      border-bottom: 1px solid #ddd;
+      text-align: right;
+  }
+  .table  td:last-child {
+      border-bottom: 0px;
+  }
+  .table td::before {
+      content: attr(data-label);
+      font-weight: bold;
+      text-transform: uppercase;
+      float: left;
+  }
+}
+.buttons {
+  text-align: center;
+  /* position:absolute;
+  top: 300px; */
+  }
+  .button {
+  font-size: 20px;
+  color: white;
+  text-align: center;
+  border-radius: 8px;
+  font-size: 21px;
+  background:#4a6da7;
+  padding: 10px 20px 10px 20px;
+  border: none;
+  }
+  .button:hover {
+  background: #0090FF;
+  color: whitesmoke;
+  }
 @media (max-width: 992px) {
   .card-text {
     font-size: 0.9rem;
