--- a/estilos/style.css
+++ b/estilos/style.css
@@ -198,6 +198,9 @@ h6 {
   background: #0090FF;
   color: whitesmoke;
   }
+.clima{
+  list-style-type: none;
+}
 @media (max-width: 992px) {
   .card-text {
     font-size: 0.9rem;
